--- a/DataAccessPlayground/App.Config
+++ b/DataAccessPlayground/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="ChinookEntities" connectionString="metadata=res://*/Model.Chinook.csdl|res://*/Model.Chinook.ssdl|res://*/Model.Chinook.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEV-TEMPLATE;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ChinookEntities" connectionString="metadata=res://*/EntityFramework.Chinook.csdl|res://*/EntityFramework.Chinook.ssdl|res://*/EntityFramework.Chinook.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEV-TEMPLATE;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
