Implementing helper class to time the tests.

--- a/DataAccessPlayground.Tests/DataAccessPlayground.Tests.csproj
+++ b/DataAccessPlayground.Tests/DataAccessPlayground.Tests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="PerformanceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeIt.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataAccessPlayground\DataAccessPlayground.csproj">
