--- a/DataAccessPlayground/DataAccessPlayground.csproj
+++ b/DataAccessPlayground/DataAccessPlayground.csproj
@@ -41,6 +41,12 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.8.0.1549\lib\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.8.0.1549\lib\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dapper\SqlMapper.cs" />
@@ -54,7 +60,9 @@
     <Compile Include="EntityFramework\Repository\IChinookUnitOfWork.cs" />
     <Compile Include="EntityFramework\Repository\IRepository.cs" />
     <Compile Include="EntityFramework\Repository\IUnitOfWork.cs" />
+    <Compile Include="Helpers\TimeIt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\PerformanceTests.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
