--- a/DataAccessPlayground/packages.config
+++ b/DataAccessPlayground/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.7" />
+  <package id="xunit" version="1.8.0.1549" />
+  <package id="xunit.extensions" version="1.8.0.1549" />
 </packages>
