Initial NHibernate test for stored procedure.

--- a/DotNetDataAccessPerformance/App.Config
+++ b/DotNetDataAccessPerformance/App.Config
@@ -1,6 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="hibernate-configuration" requirePermission="false" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+  </configSections>
   <connectionStrings>
+    <add name="ChinookDB" connectionString="data source=localhost;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;"/>
     <add name="ChinookEntities" connectionString="metadata=res://*/EntityFramework.Chinook.csdl|res://*/EntityFramework.Chinook.ssdl|res://*/EntityFramework.Chinook.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <reflection-optimizer use="false" />
+    <session-factory>
+      <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
+      <property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
+      <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
+      <property name="connection.connection_string">data source=localhost;initial catalog=Chinook;integrated security=True;multipleactiveresultsets=True;</property>
+      <property name="show_sql">false</property>
+    </session-factory>
+  </hibernate-configuration>
 </configuration>
