--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\DataAccessPlayground.Tests\packages.config" />
   <repository path="..\DataAccessPlayground\packages.config" />
+  <repository path="..\DotNetDataAccessPerformance\packages.config" />
 </repositories>
