--- a/DotNetDataAccessPerformance/DotNetDataAccessPerformance.csproj
+++ b/DotNetDataAccessPerformance/DotNetDataAccessPerformance.csproj
@@ -31,6 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Iesi.Collections">
+      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="NHibernate">
+      <HintPath>..\packages\NHibernate.3.2.0.4000\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
@@ -50,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dapper\SqlMapper.cs" />
+    <Compile Include="Domain\Album.cs" />
+    <Compile Include="Domain\Artist.cs" />
+    <Compile Include="Domain\Track.cs" />
     <Compile Include="EntityFramework\Chinook.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -60,9 +69,12 @@
     <Compile Include="EntityFramework\Repository\IChinookUnitOfWork.cs" />
     <Compile Include="EntityFramework\Repository\IRepository.cs" />
     <Compile Include="EntityFramework\Repository\IUnitOfWork.cs" />
+    <Compile Include="Helpers\ConnectionFactory.cs" />
+    <Compile Include="Helpers\NHibernateHelper.cs" />
     <Compile Include="Helpers\TimeIt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\PerformanceTests.cs" />
+    <Compile Include="Domain\Song.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -74,6 +86,9 @@
   <ItemGroup>
     <None Include="App.Config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="NHibernate\Chinook.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
