--- a/DotNetDataAccessPerformance/packages.config
+++ b/DotNetDataAccessPerformance/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.7" />
+  <package id="Iesi.Collections" version="3.2.0.4000" />
+  <package id="NHibernate" version="3.2.0.4000" />
   <package id="xunit" version="1.8.0.1549" />
   <package id="xunit.extensions" version="1.8.0.1549" />
 </packages>
