Adding test to query single table by primary key (GetArtistById).

--- a/DotNetDataAccessPerformance/DotNetDataAccessPerformance.csproj
+++ b/DotNetDataAccessPerformance/DotNetDataAccessPerformance.csproj
@@ -90,7 +90,10 @@
     <Compile Include="Domain\Song.cs" />
     <Compile Include="Repositories\RepositoryFactory.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="StoredProcedures\CreateGetArtistById.sql" />
+    <Content Include="StoredProcedures\CreateGetSongsByArtist.sql" />
+  </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="EntityFramework\Chinook.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
