--- a/DotNetDataAccessPerformance/App.Config
+++ b/DotNetDataAccessPerformance/App.Config
@@ -17,4 +17,15 @@
       <property name="show_sql">false</property>
     </session-factory>
   </hibernate-configuration>
+  <system.diagnostics>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="delimitedListener"
+          type="System.Diagnostics.DelimitedListTraceListener"
+          initializeData="PerformanceTests.csv"
+          traceOutputOptions="ProcessId, DateTime" />
+        <remove name="Default" />        
+      </listeners>
+    </trace>
+  </system.diagnostics> 
 </configuration>
