--- a/DotNetDataAccessPerformance/DotNetDataAccessPerformance.csproj
+++ b/DotNetDataAccessPerformance/DotNetDataAccessPerformance.csproj
@@ -101,7 +101,9 @@
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
